--- a/003-chapter/008-task/index.html
+++ b/003-chapter/008-task/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Главная</title>
 </head>
 
 <body>
-    <p>Привет мир!!!</p>
+    <h1>Добро пожаловать на сайт Кота-тренера</h1>
+    <p>Здравствуйте, меня зовут Василий. Подробнее обо мне можете узнать ниже:</p>
+    <p>
+    <ul>
+        <li><a href="about.html">Обо мне</a></li>
+        <li><a href="services.html">Мои услуги</a></li>
+        <li><a href="contacts.html">Мои контакты</a></li>
+    </ul>
+    </p>
 </body>
 
 </html>
