--- a/004-chapter/005-colors/index.html
+++ b/004-chapter/005-colors/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
-    <h3>Заливка: Красный</h3>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
+    <h3 style="background-color: rgb(255, 0, 0);">Заливка: Красный</h3>
+    <h3 class=" element" style="background-color: #00ff00;">Заливка: Зеленый</h3>
+    <h3 class="element" style="background-color: rgba(0, 0, 255, 0.5)">Заливка: Синий с прозрачностью</h3>
+    <h3 class="element" style="background-color: linear-gradient(to right, #ff6600, #00ccff)">Градиент: От оранжевого к
+        голубому
+    </h3>
+    <h3 class="element">Градиент: Радиальный от розового к фиолетовому</h3>
+    <h3 class="element">Градиент: Диагональный от желтого к фиолетовому</h3>
 </body>
 
 </html>
