--- a/005-chapter/022-demo-tip-calculator-dom-js/index.html
+++ b/005-chapter/022-demo-tip-calculator-dom-js/index.html
@@ -11,13 +11,13 @@
     <h1>Калькулятор чаевых</h1>
 
     <label>Сумма счета:</label>
-    <input type="number" id="billAmount" value="2000"><br><br>
+    <input type="number" id="billAmount"><br><br>
 
     <label>Процент чаевых:</label>
-    <input type="number" id="tipPercentage" value="10"><br><br>
+    <input type="number" id="tipPercentage"><br><br>
 
     <label>Количество человек:</label>
-    <input type="number" id="numberOfPeople" value="10"><br><br>
+    <input type="number" id="numberOfPeople"><br><br>
 
     <button id="calculateButton">Рассчитать</button><br><br>
 
